--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                     <div class="card-body">
                         <h5 class="card-title">Doceria Bendito Brigadeiro: 
                         </h5>
-                        <p class="card-text">Este projeto é um jogo interativo baseado em navegador que explora o
-                            impacto e as implicações da Inteligência Artificial (IA) na sociedade, permitindo que as
-                            pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o
-                            futuro da IA.</p>
-                        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja
-                            o projeto</button>
+                        <p class="card-text">A propaganda da doçaria de brigadeiro visa promover a venda de brigadeiros gourmet,
+                             destacando a qualidade e variedade dos doces. A *Brigadeiros da Luz* oferece opções tradicionais e sabores inovadores,
+                              feitos com ingredientes frescos. A promoção especial oferece 2 brigadeiros grátis na compra de 12, 
+                              ideal para festas e momentos especiais. A mensagem final convida os clientes 
+                            a visitar a loja ou fazer pedidos pelo WhatsApp, enfatizando que o sabor dos brigadeiros ilumina o dia das pessoas.</p>
+                       
                     </div>
                 </div>
             </div>
