--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
     <header class="container text-center">
         <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
-        <p class="lead">Eu sou Fernanda_</p>
-        <h1>Eu ensino Programação</h1>
-        <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino
-            Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
+        <p class="lead">Eu sou Isabeli_</p>
+        <h1>Eu aprendo Programação</h1>
+        <p>Sou aluna de Computação. Aprendo pensamento computacional no colégio Maria Senek. Aprendo sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
             que já desenvolvi!</p>
         <p>Minhas habilidades</p>
         <div>
@@ -41,8 +40,7 @@
                              A página é estilizada com CSS para uma visualização agradável e usa fontes
                             externas do Google Fonts.
                         </p>
-                        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
-                            o projeto</button>
+                        
                     </div>
                 </div>
             </div>
@@ -68,14 +66,13 @@
                 <div class="card">
                     <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Explorando o Universo: Uma Aventura Interativa em Astronomia com Scratch
+                        <h5 class="card-title">Explorando o mar: Peixes falantes
                         </h5>
-                        <p class="card-text">EEste projeto Scratch cria uma experiência interativa educativa sobre
-                            astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
-                            forma da Terra através de cenários dinâmicos e diálogos informativos.
+                        <p class="card-text">EEste projeto Scratch cria uma simulação(história) 
+                            de dois peixes que conversam, aonde, um deles esta aprendendo 
+                            a falar patoles e o outro fica sem entender nada,sendo uma comédia para quem esta assistindo e lendo.
                         </p>
-                        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
-                            o projeto</button>
+                        
                     </div>
                 </div>
             </div>
